--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,5 +1,6 @@
 {
     "recommendations": [
-        "hediet.vscode-drawio"
+        "hediet.vscode-drawio",
+        "travisthetechie.write-good-linter"
     ]
 }
