Workflow: New file add to use as a exemple in the next classes.

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,6 +1,7 @@
 {
     "recommendations": [
         "hediet.vscode-drawio",
-        "travisthetechie.write-good-linter"
+        "travisthetechie.write-good-linter",
+        "esbenp.prettier-vscode"
     ]
 }
